--- a/jogoDaVelha/Views/Base.lproj/LaunchScreen.storyboard
+++ b/jogoDaVelha/Views/Base.lproj/LaunchScreen.storyboard
@@ -16,6 +16,12 @@
                     <view key="view" contentMode="scaleAspectFit" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mocLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UrT-hb-5N1">
+                                <rect key="frame" x="107" y="385" width="200" height="126"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -26,6 +32,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="mocLogo" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
