--- a/jogoDaVelha/Views/Base.lproj/LaunchScreen.storyboard
+++ b/jogoDaVelha/Views/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mocLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UrT-hb-5N1">
-                                <rect key="frame" x="107" y="385" width="200" height="126"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mocLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UrT-hb-5N1">
+                                <rect key="frame" x="107" y="394" width="200" height="108"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="FKr-zs-Jre"/>
+                                    <constraint firstAttribute="height" constant="108" id="LFe-ZQ-fzz"/>
+                                    <constraint firstAttribute="width" secondItem="UrT-hb-5N1" secondAttribute="height" multiplier="50:27" id="njv-Kx-Hhb"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UrT-hb-5N1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hCU-Wi-C8t"/>
+                            <constraint firstItem="UrT-hb-5N1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="u6Z-V9-n55"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
